force-app/main/default/objects/Account/fields/Collabosphere_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Collabosphere_Assignee__c</fullName>
    <description>This is for service to assign a primary contact person to contact the account regarding Collabosphere</description>
    <inlineHelpText>Collabosphere service contact</inlineHelpText>
    <label>Collabosphere Assignee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caitlin Giss</fullName>
                <color>#0B6FCE</color>
                <label>Caitlin Giss</label>
            </value>
            <value>
                <fullName>Chris Romero</fullName>
                <color>#78C953</color>
                <label>Chris Romero</label>
            </value>
            <value>
                <fullName>Dana Fordham</fullName>
                <color>#E27001</color>
                <label>Dana Fordham</label>
            </value>
            <value>
                <fullName>Daniel Borhanian</fullName>
                <color>#A845DC</color>
                <label>Daniel Borhanian</label>
            </value>
            <value>
                <fullName>Elizabeth Bruns</fullName>
                <color>#F3D904</color>
                <label>Elizabeth Bruns</label>
            </value>
            <value>
                <fullName>Habib Daof</fullName>
                <color>#A53711</color>
                <label>Habib Daof</label>
            </value>
            <value>
                <fullName>James Pulliam</fullName>
                <color>#66E9BD</color>
                <label>James Pulliam</label>
            </value>
            <value>
                <fullName>Kate Thorne</fullName>
                <color>#0B24BE</color>
                <label>Kate Thorne</label>
            </value>
            <value>
                <fullName>Katie Gaston</fullName>
                <color>#419249</color>
                <label>Katie Gaston</label>
            </value>
            <value>
                <fullName>Kevin Lewis</fullName>
                <color>#B6E32E</color>
                <label>Kevin Lewis</label>
            </value>
            <value>
                <fullName>Lauren Nunn</fullName>
                <color>#641CCF</color>
                <label>Lauren Nunn</label>
            </value>
            <value>
                <fullName>Paul Zukauskas</fullName>
                <color>#F96FB7</color>
                <label>Paul Zukauskas</label>
            </value>
            <value>
                <fullName>Rula Marie</fullName>
                <color>#2F5D85</color>
                <label>Rula Marie</label>
            </value>
            <value>
                <fullName>Susan Burrows</fullName>
                <color>#AFCADF</color>
                <label>Susan Burrows</label>
            </value>
            <value>
                <fullName>Will Lentz</fullName>
                <color>#8F6429</color>
                <label>Will Lentz</label>
            </value>
            <value>
                <fullName>Ashkan Naderi</fullName>
                <color>#EFAE73</color>
                <label>Ashkan Naderi</label>
            </value>
            <value>
                <fullName>Erin Brophy</fullName>
                <color>#57F17C</color>
                <label>Erin Brophy</label>
            </value>
            <value>
                <fullName>Stephen Nunez</fullName>
                <color>#0B6FCE</color>
                <label>Stephen Nunez</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>