force-app/main/default/objects/Account/fields/Commission_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Start_Date__c</fullName>
    <label>Commission Start Date</label>
    <type>Date</type>
</CustomField>