force-app/main/default/objects/Account/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>ZoomInfo Company Size used to map to our No. of Employee field buckets</description>
    <label>Company Size</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>