force-app/main/default/objects/Account/fields/ConversionPriority__c.field-meta.xml
<CustomField>
    <fullName>ConversionPriority__c</fullName>
    <inlineHelpText>Controlled by Marketing teams only, not on the layout</inlineHelpText>
    <label>Conversion Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Worked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>