force-app/main/default/objects/Account/fields/Copresenter_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Copresenter_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Allows chairperson to promote participant/s to presenter status.</inlineHelpText>
    <label>Copresenter Allowed</label>
    <type>Checkbox</type>
</CustomField>