force-app/main/default/objects/Account/fields/corpLicBillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>corpLicBillingFrequency__c</fullName>
    <description>Corporate Billing Frequency</description>
    <label>Corporate License Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>