force-app/main/default/objects/Account/fields/corpLicRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>corpLicRenewalDate__c</fullName>
    <description>Corporate License Expiration Date</description>
    <inlineHelpText>This field will be populated after the first bill run, for Corp Licenses billed annually.</inlineHelpText>
    <label>Corporate License Expiration Date</label>
    <type>Date</type>
</CustomField>