force-app/main/default/objects/Account/fields/corpLicStartDate__c.field-meta.xml
<CustomField>
    <fullName>corpLicStartDate__c</fullName>
    <description>Corporate License Start Date</description>
    <label>Corporate License Start Date</label>
    <type>Date</type>
</CustomField>