force-app/main/default/objects/Account/fields/corporateLicenseRate__c.field-meta.xml
<CustomField>
    <fullName>corporateLicenseRate__c</fullName>
    <description>Corporate License Rate</description>
    <label>Corporate License Price</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>