force-app/main/default/objects/Account/fields/corporateLicenseType__c.field-meta.xml
<CustomField>
    <fullName>corporateLicenseType__c</fullName>
    <description>Corporate License Type</description>
    <label>Corporate License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Corporate License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>