force-app/main/default/objects/Account/fields/Count_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Leads__c</fullName>
    <label>Count of Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>