force-app/main/default/objects/Account/fields/Count_of_Open_Opps_PGi__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Open_Opps_PGi__c</fullName>
    <label>Count of Open Opps (PGi)</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>