force-app/main/default/objects/Account/fields/Count_of_Recent_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Recent_Contacts__c</fullName>
    <inlineHelpText>Shows total Contacts that have been modified/created in the last 90 days related to this Account.</inlineHelpText>
    <label>Contacts (Recent Count of)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>