force-app/main/default/objects/Account/fields/Count_of_Recent_Events__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Recent_Events__c</fullName>
    <inlineHelpText>Shows total Events that have been modified/created in the last 90 days related to this Account.</inlineHelpText>
    <label>Events (Recent Count of)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>