force-app/main/default/objects/Account/fields/Cumulative_Total_Booked__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Total_Booked__c</fullName>
    <description>ASX Populated - Amount is the cumulative total booked since start for billing</description>
    <inlineHelpText>Cumulative amount booked by this account client</inlineHelpText>
    <label>Cumulative Total Booked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>