force-app/main/default/objects/Account/fields/Currently_Webcasting__c.field-meta.xml
<CustomField>
    <fullName>Currently_Webcasting__c</fullName>
    <description>TP Field</description>
    <label>Currently Webcasting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>