force-app/main/default/objects/Account/fields/Custom_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Custom_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the rates for this account are custom, this is checked.</description>
    <inlineHelpText>Check this box if any Int&apos;l audio rates (on-demand rates only) have been modified.</inlineHelpText>
    <label>Custom Int&apos;l Audio Rates</label>
    <type>Checkbox</type>
</CustomField>