force-app/main/default/objects/Account/fields/Customer_Billing_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_ID__c</fullName>
    <description>This is the Billing ID in ASX</description>
    <label>Customer Billing ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>