force-app/main/default/objects/Account/fields/Customer_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Company_ID__c</fullName>
    <description>This is the Customer ID in ASX.</description>
    <externalId>true</externalId>
    <label>Customer Company ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>