force-app/main/default/objects/Account/fields/Customer_Success_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Rating__c</fullName>
    <inlineHelpText>This is the weighted value assigned by the Customer Success Team</inlineHelpText>
    <label>Customer Success Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>