force-app/main/default/objects/Account/fields/Date_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>Date_Cleaned__c</fullName>
    <label>Date Cleaned</label>
    <type>DateTime</type>
</CustomField>