force-app/main/default/objects/Account/fields/Date_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Date_Deleted__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
The date and time this account was made inactive.</description>
    <label>Date Deleted</label>
    <type>DateTime</type>
</CustomField>