force-app/main/default/objects/Account/fields/Date_of_First_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Invoice__c</fullName>
    <label>Date of First Invoice</label>
    <type>Date</type>
</CustomField>