force-app/main/default/objects/Account/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <inlineHelpText>Please click &quot;Update from NetSuite&quot; button to ensure accuracy of this field.</inlineHelpText>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>