force-app/main/default/objects/Account/fields/DBsLocationType__c.field-meta.xml
<CustomField>
    <fullName>DBsLocationType__c</fullName>
    <formula>IF(ISPICKVAL(DandbCompany.LocationStatus, &quot;0&quot;),&quot;Single Location. No other entities report to the business&quot;,
IF(ISPICKVAL(DandbCompany.LocationStatus, &quot;1&quot;),&quot;Headquarters/Parent. Branches and/or subsidiaries report to the business&quot;,
IF(ISPICKVAL(DandbCompany.LocationStatus, &quot;2&quot;),&quot;Branch. Secondary location to a headquarters location&quot;,
&quot;Not mapped&quot;
)
)
)</formula>
    <inlineHelpText>The Location Type of the related D&amp;B company if the Account has been cleaned and matched to a D&amp;B company.</inlineHelpText>
    <label>D&amp;B&apos;s Location Type</label>
    <type>Text</type>
</CustomField>