force-app/main/default/objects/Account/fields/DBsofEmployeesatthisLocation__c.field-meta.xml
<CustomField>
    <fullName>DBsofEmployeesatthisLocation__c</fullName>
    <formula>DandbCompany.EmployeesHere</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The # of Employees at Location of the related D&amp;B company if the Account has been cleaned and matched to a D&amp;B company.</inlineHelpText>
    <label>D&amp;B&apos;s # of Employees at this Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>