force-app/main/default/objects/Account/fields/DBsofEmployeesGlobally__c.field-meta.xml
<CustomField>
    <fullName>DBsofEmployeesGlobally__c</fullName>
    <formula>DandbCompany.EmployeesTotal</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The # of Employees Global of the related D&amp;B company if the Account has been cleaned and matched to a D&amp;B company.</inlineHelpText>
    <label>D&amp;B&#39;s # of Employees Globally</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>