force-app/main/default/objects/Account/fields/Default_Web_Subscription_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Web_Subscription_Size__c</fullName>
    <label>Default Web Subscription Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>