force-app/main/default/objects/Account/fields/defaultPlan__c.field-meta.xml
<CustomField>
    <fullName>defaultPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the default Plan for this Account</description>
    <label>Default Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>