force-app/main/default/objects/Account/fields/Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Duns_Number__c</fullName>
    <description>Used in PopulateParentAccount Trigger</description>
    <externalId>true</externalId>
    <label>ADMIN Duns Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>