force-app/main/default/objects/Account/fields/DuplicateDetectedforParentLookup__c.field-meta.xml
<CustomField>
    <fullName>DuplicateDetectedforParentLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Detected for Parent Lookup</label>
    <type>Checkbox</type>
</CustomField>