force-app/main/default/objects/Account/fields/Entry_Announcement__c.field-meta.xml
<CustomField>
    <fullName>Entry_Announcement__c</fullName>
    <inlineHelpText>Announces a participant entering an audio conference via a tone or the participant’s name.</inlineHelpText>
    <label>Entry Announcement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tone</fullName>
                <default>true</default>
                <label>Tone</label>
            </value>
            <value>
                <fullName>Silence</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>