force-app/main/default/objects/Account/fields/Event_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Customer_Status__c</fullName>
    <label>Event Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing - Affiliate</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>