force-app/main/default/objects/Account/fields/Exclude_from_Integration__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected as TRUE then the Account will not be updated from the integration we have with the PGi Premier Database.  That integration sets account ownership, account teams, account status, and billed revenue details.</inlineHelpText>
    <label>Exclude from Integration</label>
    <type>Checkbox</type>
</CustomField>