force-app/main/default/objects/Account/fields/Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Exp_Date__c</fullName>
    <inlineHelpText>Enter expiration date in format MO/YEAR</inlineHelpText>
    <label>Exp Date</label>
    <length>7</length>
    <type>Text</type>
</CustomField>