force-app/main/default/objects/Account/fields/Financial_Markets_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Markets_Type__c</fullName>
    <description>TP Field</description>
    <label>Financial Markets Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Type 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>