force-app/main/default/objects/Account/fields/Global_Account_MQA__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_MQA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Account MQA</label>
    <type>Checkbox</type>
</CustomField>