force-app/main/default/objects/Account/fields/Global_Account_MQA_Assignment_date__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_MQA_Assignment_date__c</fullName>
    <label>Global Account MQA Assignment date</label>
    <type>Date</type>
</CustomField>