force-app/main/default/objects/Account/fields/Global_Region__c.field-meta.xml
<CustomField>
    <fullName>Global_Region__c</fullName>
    <label>Global Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>