force-app/main/default/objects/Account/fields/Gross_Annual_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Gross_Annual_Opportunity__c</fullName>
    <description>This will be populated by workflow</description>
    <inlineHelpText>(Total Possible Users - Licensed Internal Users) * Average Annual User Price</inlineHelpText>
    <label>Gross Annual Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>