force-app/main/default/objects/Account/fields/Historic_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Historic_Lead_Source__c</fullName>
    <description>TP Field</description>
    <label>Historic Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current Customer: Existing Contact</fullName>
            </value>
            <value>
                <fullName>Current Customer: New Division</fullName>
            </value>
            <value>
                <fullName>Outbound Acitvity: They Use A Competitor</fullName>
            </value>
            <value>
                <fullName>Outbound Acitvity: Web Search</fullName>
            </value>
            <value>
                <fullName>Outbound Acitvity: Previous Meeting</fullName>
            </value>
            <value>
                <fullName>Outbound Acitvity: Referral From Client</fullName>
            </value>
            <value>
                <fullName>Outbound Acitvity: Conference Presenter</fullName>
            </value>
            <value>
                <fullName>Outbound Activity - Email Blast</fullName>
            </value>
            <value>
                <fullName>Outbound Activity - LexisNexis</fullName>
            </value>
            <value>
                <fullName>Inbound Activity: Viewed Article/Media</fullName>
            </value>
            <value>
                <fullName>Inbound Activity: Viewed Event</fullName>
            </value>
            <value>
                <fullName>Inbound Activty: Web Search - Google</fullName>
            </value>
            <value>
                <fullName>Inbound Activity: Web Search - Other</fullName>
            </value>
            <value>
                <fullName>Inbound Activity: Referral From Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>