force-app/main/default/objects/Account/fields/iMC_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>iMC Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>