force-app/main/default/objects/Account/fields/Implementation_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is assigned by the head of services</description>
    <label>Implementation Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_del</relationshipName>
    <type>Lookup</type>
</CustomField>