force-app/main/default/objects/Account/fields/Inactivated_By__c.field-meta.xml
<CustomField>
    <fullName>Inactivated_By__c</fullName>
    <description>Person&#39;s ID who marks this account as inactive.</description>
    <label>Deleted By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>