force-app/main/default/objects/Account/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS
If the account is inactive (ie deleted, but not deleted from the db), this should be checked.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>