force-app/main/default/objects/Account/fields/Internal_License_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Internal_License_Utilization__c</fullName>
    <description>The purpose of this field is to measure the ROI within internal users of an account. Account falling behind a specific threshold (ex = %25) will be automatically flagged as at risk.</description>
    <formula>Total_Internal_Users__c  /  Licensed_Internal_Users__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal License Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>