force-app/main/default/objects/Account/fields/Internal_User_Amount__c.field-meta.xml
<CustomField>
    <fullName>Internal_User_Amount__c</fullName>
    <description>[11/5/15, JK]: Created for Marianna Rodriguez.</description>
    <label>Internal User - $ Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>