force-app/main/default/objects/Account/fields/International_Dial_Out_Allowed__c.field-meta.xml
<CustomField>
    <fullName>International_Dial_Out_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Dial Out Allowed</label>
    <type>Checkbox</type>
</CustomField>