force-app/main/default/objects/Account/fields/Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count__c</fullName>
    <description>A field used to track the number of invoices an Account has had.  This number is used to calculate CHURN</description>
    <inlineHelpText>Number of invoices an Account has billed with ReadyTalk.  This field is used to determine CHURN</inlineHelpText>
    <label>Invoice Count</label>
    <summarizedField>NetSuite_Financial__c.Invoice_Count_for_Churn__c</summarizedField>
    <summaryFilterItems>
        <field>NetSuite_Financial__c.Type__c</field>
        <operation>equals</operation>
        <value>Invoice</value>
    </summaryFilterItems>
    <summaryForeignKey>NetSuite_Financial__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>