force-app/main/default/objects/Account/fields/Invoice_Format__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Format__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Indicates which format the customer would like to receive their invoice each month.</description>
    <inlineHelpText>Select print, email or print &amp; email for invoice delivery options.</inlineHelpText>
    <label>Invoice Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Print &amp; Email</fullName>
            </value>
            <value>
                <fullName>None (Accounting Use ONLY)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>