force-app/main/default/objects/Account/fields/Is_this_a_PGi_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_PGi_Account__c</fullName>
    <label>Is this a PGi Account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>