force-app/main/default/objects/Account/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>Lead that created this account</description>
    <label>Lead ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>